2005-10-07  Alex Roitman  <shura@gramps-project.org>
	* doc/gramps-manual/C/cmdplug.xml: Add new section documenting
	plugin options (Reports and Tools).
	* src/build_cmdplug: Add script to refresh the new doc section.
	* doc/gramps-manual/C/Makefile.am: Ship new file.
	* doc/gramps-manual/C/gramps-manual.xml: Define new entity.
	* doc/gramps-manual/C/cmdline.xml: Include new section.
	* src/Makefile.am: Define new make target (cmdplug).
	* src/PluginMgr.py: Include human-readable names in CLI plugins
	registration.
	* src/Report.py: Allow instantiation of command-line report
	without adding item-specific options.
	* src/Tool.py: Allow instantiation of command-line tool
	without adding item-specific options.
	* src/plugins/CmdRef.py: Add options for inclusion into the manual
	and the target filename; Use human-readable names for titles; Add
	section with common options; Add name option.

2005-10-06  Don Allingham  <don@gramps-project.org>
	* src/plugins/DetAncestralReport.py: fix margin on note paragraph
	* src/DateEdit.py: try using standard icons

2005-10-06  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/CmdRef.py: Work out Report docs.
	* src/Report.py: Typo.

	* src/WriteXML.py: Switch from preferred to alt name attribute.
	* doc/grampsxml.dtd: Update.
	* src/ReadXML.py: Bring in sync with format changes.

2005-10-06  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/CmdRef.py: New file.

2005-10-06  Don Allingham  <don@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: handle superscript properly
	* src/ReportUtils.py: remove name generation from list_person_str
	* src/plugins/DetAncestralReport.py: fix child list, use roman numerals

2005-10-06  Alex Roitman  <shura@gramps-project.org>
	* src/TreeTips.py: Typo.
	* src/plugins/ScratchPad.py: Convert to new API.
	* src/plugins/DumpGenderStats.py: Convert to new API.
	* src/ArgHandler.py: Do actions prior to exports.
	* doc/gramps.1.in: Document new execution order.
