@@ -1,3 +1,6 @@
+2005-10-07  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/plugins/TestcaseGenerator.py: Feed in more data
+	
 2005-10-07  Alex Roitman  <shura@gramps-project.org>
 	* doc/gramps-manual/C/cmdplug.xml: Add new section documenting
 	plugin options (Reports and Tools).
